--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@types/d3": "7.4.0",
     "d3": "7.8.5",
     "powerbi-visuals-api": "~5.3.0",
     "powerbi-visuals-utils-chartutils": "^6.0.1",
@@ -25,6 +24,7 @@
     "powerbi-visuals-utils-tooltiputils": "^6.0.1"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "eslint": "^8.42.0",
     "eslint-plugin-powerbi-visuals": "^0.8.1",
